--- a/layout/login.phtml
+++ b/layout/login.phtml
@@ -1,4 +1,4 @@
-<?php muat_layout('header', ['title' => 'Masuk Ke Dasbor']); ?>
+<?php muat_layout('header', ['is_login_page' => true, 'title' => 'Masuk Ke Dasbor']); ?>
     <div class="row" id="form-login">
       <div class="col-md-4 col-md-offset-4">
         <div class="panel panel-default">
